Add Discord endpoint

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
           <id>jitpack.io</id>
           <url>https://jitpack.io</url>
       </repository>
+      <repository>
+          <id>Scarsz-Nexus</id>
+          <url>https://nexus.scarsz.me/content/groups/public/</url>
+      </repository>
   </repositories>
 
   <dependencies>
@@ -100,6 +104,12 @@
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
           <version>2.16.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.discordsrv</groupId>
+          <artifactId>discordsrv</artifactId>
+          <version>1.27.0</version>
+          <scope>provided</scope>
       </dependency>
   </dependencies>
 </project>
