--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: EMCAPI
 version: "${project.version}"
 main: net.earthmc.emcapi.EMCAPI
 api-version: "1.19"
-depend: [Towny, Quarters, Vault]
+depend: [Towny, Quarters, Vault, DiscordSRV]
 authors: [Fruitloopins]
 description: API for EarthMC using Javalin
 website: https://earthmc.net
