--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
           <id>Scarsz-Nexus</id>
           <url>https://nexus.scarsz.me/content/groups/public/</url>
       </repository>
+      <repository>
+          <id>placeholderapi</id>
+          <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+      </repository>
   </repositories>
 
   <dependencies>
@@ -109,6 +113,12 @@
           <groupId>com.discordsrv</groupId>
           <artifactId>discordsrv</artifactId>
           <version>1.27.0</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>me.clip</groupId>
+          <artifactId>placeholderapi</artifactId>
+          <version>2.11.5</version>
           <scope>provided</scope>
       </dependency>
   </dependencies>
