--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <voteparty.path>${project.basedir}/libs/VoteParty-1.14.0.jar</voteparty.path>
   </properties>
     <url>https://earthmc.net</url>
 
@@ -120,6 +121,13 @@
           <artifactId>placeholderapi</artifactId>
           <version>2.11.5</version>
           <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>me.clip</groupId>
+          <artifactId>voteparty</artifactId>
+          <version>1.14.0</version>
+          <scope>system</scope>
+          <systemPath>${voteparty.path}</systemPath>
       </dependency>
   </dependencies>
 </project>
