--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>net.earthmc</groupId>
   <artifactId>EMCAPI</artifactId>
-  <version>0.1.1</version>
+  <version>3</version>
   <packaging>jar</packaging>
 
   <name>EMCAPI</name>
@@ -20,6 +20,7 @@
     <url>https://earthmc.net</url>
 
     <build>
+        <finalName>${project.artifactId}-v${project.version}</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
