Add Mystery Master endpoint

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: EMCAPI
 version: "${project.version}"
 main: net.earthmc.emcapi.EMCAPI
 api-version: "1.19"
-depend: [Towny, Quarters, Vault, DiscordSRV, SuperbVote]
+depend: [Towny, Quarters, Vault, DiscordSRV, SuperbVote, MysteryMaster]
 authors: [Fruitloopins]
 contributors: [Warriorrr, Yoditi]
 description: API for EarthMC using Javalin
