--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
           <id>placeholderapi</id>
           <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
       </repository>
+      <repository>
+          <id>earthmc</id>
+          <url>https://repo.earthmc.net/releases/</url>
+      </repository>
   </repositories>
 
   <dependencies>
@@ -91,7 +95,7 @@
       <dependency>
           <groupId>io.javalin</groupId>
           <artifactId>javalin</artifactId>
-          <version>6.0.0</version>
+          <version>6.3.0</version>
       </dependency>
       <dependency>
           <groupId>com.github.jwkerr</groupId>
@@ -116,18 +120,10 @@
           <version>1.27.0</version>
           <scope>provided</scope>
       </dependency>
-      <!-- our fork of superbvote, used for getting vote party count -->
-      <!-- not published currently, clone https://github.com/EarthMC/SuperbVote and mvn install -->
       <dependency>
-          <groupId>io.minimum.minecraft</groupId>
+          <groupId>net.earthmc.superbvote</groupId>
           <artifactId>SuperbVote</artifactId>
           <version>0.6.0</version>
-          <scope>provided</scope>
-      </dependency>
-      <dependency>
-          <groupId>net.earthmc</groupId>
-          <artifactId>MysteryMaster</artifactId>
-          <version>1.0-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
   </dependencies>
