--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>net.earthmc</groupId>
   <artifactId>EMCAPI</artifactId>
-  <version>3</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>EMCAPI</name>
@@ -79,6 +79,17 @@
       </repository>
   </repositories>
 
+  <distributionManagement>
+    <repository>
+        <id>earthmc</id>
+        <url>https://repo.earthmc.net/releases</url>
+    </repository>
+    <snapshotRepository>
+        <id>earthmc</id>
+        <url>https://repo.earthmc.net/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <dependencies>
       <dependency>
           <groupId>io.papermc.paper</groupId>
@@ -127,4 +138,5 @@
           <scope>provided</scope>
       </dependency>
   </dependencies>
+
 </project>
