--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: "${project.version}"
 main: net.earthmc.emcapi.EMCAPI
 api-version: "1.20"
 depend: [Towny, Quarters, Vault, DiscordSRV, SuperbVote]
+softdepend: [MysteryMaster]
 authors: [Fruitloopins]
 contributors: [Warriorrr, Yoditi]
 description: API for EarthMC using Javalin
