Use cached balances for offline players
Getting the balance of an offline player is more expensive than an online one, so use the builtin cached balances for these.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: EMCAPI
 version: "${project.version}"
 main: net.earthmc.emcapi.EMCAPI
 api-version: "1.20"
-depend: [Towny, Quarters, Vault, DiscordSRV, SuperbVote]
+depend: [Towny, Quarters, DiscordSRV, SuperbVote]
 softdepend: [MysteryMaster]
 authors: [Fruitloopins]
 contributors: [Warriorrr, Yoditi]
